--- a/simplemooc/core/templates/home.html
+++ b/simplemooc/core/templates/home.html
@@ -1,26 +1,6 @@
-<!doctype html>
-{% load static %}
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Simple MOOC - Uma simples plataforma de ensino a distância" />
-    <title>Simple MOOC</title>
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
-</head>
-<body>
-<div class="content">
-    <div class="header">
-        <div class="pure-menu pure-menu-open pure-menu-fixed pure-menu-horizontal">
-            <a class="pure-menu-heading" href="">SIMPLE MOOC</a>
-            <ul>
-                <li class="pure-menu-selected"><a href="#">Início</a></li>
-                <li><a href="#">Cursos</a></li>
-                <li><a href="#">Contato</a></li>
-            </ul>
-        </div>
-    </div>
+{% extends "base.html" %}
+
+{% block content %}
     <div class="splash">
         <div class="pure-g-r">
             <div class="pure-u-1">
@@ -52,7 +32,7 @@
             <div class="pure-u-1-3">
                 <div class="l-box">
                     <img src="http://placehold.it/400x250"
-                         alt="Vídeo aulas e materiais digitais.">
+                            alt="Vídeo aulas e materiais digitais.">
                 </div>
             </div>
         </div>
@@ -60,7 +40,7 @@
             <div class="pure-u-1-3">
                 <div class="l-box">
                     <img src="http://placehold.it/400x250"
-                         alt="Fórum de Dúvidas">
+                            alt="Fórum de Dúvidas">
                 </div>
             </div>
             <div class="pure-u-2-3">
@@ -86,7 +66,7 @@
             <div class="pure-u-1-3">
                 <div class="l-box">
                     <img src="http://placehold.it/400x250"
-                         alt="Exercícios">
+                            alt="Exercícios">
                 </div>
             </div>
         </div>
@@ -94,7 +74,7 @@
             <div class="pure-u-1-3">
                 <div class="l-box">
                     <img src="http://placehold.it/400x250"
-                         alt="Mural de Avisos">
+                            alt="Mural de Avisos">
                 </div>
             </div>
             <div class="pure-u-2-3">
@@ -108,10 +88,4 @@
             </div>
         </div>
     </div>
-    <div class="footer">
-        Simple MOOC - Uma simples plataforma de ensino a distância
-    </div>
-</div>
-<script src="http://yui.yahooapis.com/3.12.0/build/yui/yui-min.js"></script>
-</body>
-</html>
+{% endblock %}
