--- a/simplemooc/courses/templates/courses/index.html
+++ b/simplemooc/courses/templates/courses/index.html
@@ -7,55 +7,24 @@
     </div>
   </div>
 </div>
+{% for course in courses %}
 <div class="pure-g-r content-ribbon">
   <div class="pure-u-1-3">
     <div class="l-box">
       <a href=""
-        ><img src="http://placehold.it/400x250" alt="Python na Web com Django"
+        ><img src="http://placehold.it/400x250" alt="{{ course }}"
       /></a>
     </div>
   </div>
   <div class="pure-u-2-3">
     <div class="l-box">
       <h4 class="content-subhead">
-        <a href="" title="">Python na Web com Django</a>
+        <a href="" title="">{{ course.name }}</a>
       </h4>
-      <h3>
-        Um curso para quem quer aprender a web com Python de forma rápida e
-        objetiva
-      </h3>
       <p>
-        Venha aprender a construir poderosos aplicativos web com Python e o
-        framework web Django. Faça como o Instagr.am, Dropbox, Globo.com e
-        muitas outras empresas, acelere e escale seu desenvolvimento web também.
+        {{ course.description|linebreaks }}
       </p>
     </div>
   </div>
 </div>
-<div class="pure-g-r content-ribbon">
-  <div class="pure-u-1-3">
-    <div class="l-box">
-      <a href=""
-        ><img src="http://placehold.it/400x250" alt="Python na Web com Django"
-      /></a>
-    </div>
-  </div>
-  <div class="pure-u-2-3">
-    <div class="l-box">
-      <h4 class="content-subhead">
-        <a href="" title="">Python na Web com Django</a>
-      </h4>
-      <h3>
-        Um curso para quem quer aprender a web com Python de forma rápida e
-        objetiva
-      </h3>
-      <p>
-        Venha aprender a construir poderosos aplicativos web com Python e o
-        framework web Django. Faça como o Instagr.am, Dropbox, Globo.com e
-        muitas outras empresas, acelere e escale seu desenvolvimento web também.
-      </p>
-    </div>
-  </div>
-</div>
-
-{% endblock %}
+{% endfor %} {% endblock %}
