--- a/simplemooc/courses/templates/courses/index.html
+++ b/simplemooc/courses/templates/courses/index.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block content %}
+{% extends "base.html" %} {% load static %} {% block content %}
 <div class="pure-g-r content-ribbon">
   <div class="pure-u-1">
     <div class="l-box">
@@ -11,9 +11,13 @@
 <div class="pure-g-r content-ribbon">
   <div class="pure-u-1-3">
     <div class="l-box">
-      <a href=""
-        ><img src="http://placehold.it/400x250" alt="{{ course }}"
-      /></a>
+      <a href="">
+        {% if course.image %}
+        <img src="{{ course.image.url }}" alt="{{ course }}" />
+        {% else %}
+        <img src="{% static 'img/course-image.png' %}" alt="{{ course }}" />
+        {% endif %}
+      </a>
     </div>
   </div>
   <div class="pure-u-2-3">
