--- a/simplemooc/courses/templates/courses/index.html
+++ b/simplemooc/courses/templates/courses/index.html
@@ -31,4 +31,12 @@
     </div>
   </div>
 </div>
+{% empty %}
+<div class="pure-g-r content-ribbon">
+  <div class="pure-u-1">
+    <div class="l-box">
+      <p>Nenhum curso está disponível na plataforma</p>
+    </div>
+  </div>
+</div>
 {% endfor %} {% endblock %}
