--- a/simplemooc/courses/templates/courses/index.html
+++ b/simplemooc/courses/templates/courses/index.html
@@ -11,7 +11,7 @@
 <div class="pure-g-r content-ribbon">
   <div class="pure-u-1-3">
     <div class="l-box">
-      <a href="">
+      <a href="{{ course.get_absolute_url }}">
         {% if course.image %}
         <img src="{{ course.image.url }}" alt="{{ course }}" />
         {% else %}
@@ -23,7 +23,7 @@
   <div class="pure-u-2-3">
     <div class="l-box">
       <h4 class="content-subhead">
-        <a href="" title="">{{ course.name }}</a>
+        <a href="{{ course.get_absolute_url }}" title="">{{ course.name }}</a>
       </h4>
       <p>
         {{ course.description|linebreaks }}
